update config for deploy